[gd_scene load_steps=12 format=2]

[ext_resource path="res://LevelComponents/Hostage.gd" type="Script" id=1]
[ext_resource path="res://LevelComponents/SpiritParticles.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/sprite_hostage.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 12.0

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 20.0

[sub_resource type="Animation" id=3]

resource_name = "idle_down"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]

resource_name = "idle_lr"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=5]

resource_name = "idle_up"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=6]

resource_name = "walk_down"
length = 0.2
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}

[sub_resource type="Animation" id=7]

resource_name = "walk_lr"
length = 0.2
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 7, 8 ]
}

[sub_resource type="Animation" id=8]

resource_name = "walk_up"
length = 0.2
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}

[node name="Hostage" type="KinematicBody2D"]
input_pickable = false
collision_layer = 6
collision_mask = 1
collision/safe_margin = 0.08
motion/sync_to_physics = false
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]
jump_radius = 100
being_controlled = false

[node name="SpiritParticles" parent="." instance=ExtResource( 2 )]
emitting = false

[node name="Col" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )
_sections_unfolded = [ "shape" ]

[node name="CharacterSprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
z_index = 2
texture = ExtResource( 3 )
hframes = 9
region_rect = Rect2( 0, 256, 31, 32 )
_sections_unfolded = [ "Animation", "Region", "Transform", "Z Index", "texture" ]

[node name="DieDetections" type="Area2D" parent="."]
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 1024
collision_mask = 1024
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="Col2" type="CollisionShape2D" parent="DieDetections"]
visible = false
shape = SubResource( 2 )
_sections_unfolded = [ "shape" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 0.0
anims/idle_down = SubResource( 3 )
anims/idle_lr = SubResource( 4 )
anims/idle_up = SubResource( 5 )
anims/walk_down = SubResource( 6 )
anims/walk_lr = SubResource( 7 )
anims/walk_up = SubResource( 8 )
blend_times = [  ]

[connection signal="body_entered" from="DieDetections" to="." method="_on_DieDetections_body_entered"]
